--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
 
         <main class="main">
-            <img class="mainLogo" src="./img/abc_426x240.jpg" alt="App Logo">
+            <img class="mainLogo" src="./img/bommi_426x240.jpg" alt="App Logo">
 
             <p class="mainTitle">Please wait until this application is installed on your Roku TV.</p>
             <p class="mainDescriptions">Make sure your smartphone and Roku TV were connected to the same Wi-Fi network when you scanned the QR code</p>
